--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     <title>Min første nettside</title>
 </head>
 <body>
-    HTML er artig
-    <a href="fornuftig.html">En lenke til noe fornuftig</a>
+    HTML er artig!
 </body>
 </html>
