--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <title>Min første nettside</title>
+    <title>Vi lager en nettside</title>
 </head>
 <body>
-    HTML er artig!
+    <p>Hva bør være med i den første nettsiden?</p>
+    
 </body>
 </html>
