--- a/index.html
+++ b/index.html
@@ -5,7 +5,13 @@
     <title>Vi lager en nettside</title>
 </head>
 <body>
-    <p>Hva bør være med i den første nettsiden?</p>
-    
+    <h1>Hva bør være med i den første nettsiden?</h1>
+    <ul>
+        <l1>En passende tittel</l1>
+        <l1>En header(overskrift)</l1>
+        <l1>En liste</l1>
+        <l1>En lenke til en annen nettside</l1>
+        <l1>Et bilde</l1>
+    </ul>
 </body>
 </html>
