--- a/index.html
+++ b/index.html
@@ -12,6 +12,12 @@
         <l1>En liste</l1>
         <l1>En lenke til en annen nettside</l1>
         <l1>Et bilde</l1>
+        <l1>En liten innholdfortegnelse med linker til andre sider som kan legges til</l1>
     </ul>
+    <h2>Hva bør være med i den andre nettsiden?</h2>
+    <ol>
+        <l2>En lengre tekst med forskjellig font og formatering.</l2>
+        <l2>Lenker og video til de prosjektene vi allerede har gjort i faget. F.eks lenke til spillet du lagde i scratch. Kanskje embed?</l2>
+    </ol>
 </body>
 </html>
