La til en ny fil. Om meg

--- a/index.html
+++ b/index.html
@@ -6,12 +6,15 @@
 </head>
 <body>
     <h1>Hva bør være med i den første nettsiden?</h1>
+    <a href="about.html">Om meg</a>
     <ul>
         <li>En passende tittel</li>
         <li>En header(overskrift)</li>
         <li>En liste</li>
+        <li>Test</li>
         <li>En lenke til en annen nettside</li>
         <li>Et bilde</li>
+        <li>Test2<li>
         <li>En liten innholdfortegnelse med linker til andre sider som kan legges til</li>
     </ul>
     <h2>Hva bør være med i den andre nettsiden?</h2>
