--- a/index.html
+++ b/index.html
@@ -1,26 +1,11 @@
 <!DOCTYPE html>
-<html lang = "en">
+<html>
 <head>
     <meta charset = "UTF-8">
     <title>Vi lager en nettside</title>
+    <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hva bør være med i den første nettsiden?</h1>
-    <a href="about.html">Om meg</a>
-    <ul>
-        <li>En passende tittel</li>
-        <li>En header(overskrift)</li>
-        <li>En liste</li>
-        <li>Test</li>
-        <li>En lenke til en annen nettside</li>
-        <li>Et bilde</li>
-        <li>Test2<li>
-        <li>En liten innholdfortegnelse med linker til andre sider som kan legges til</li>
-    </ul>
-    <h2>Hva bør være med i den andre nettsiden?</h2>
-    <ol>
-        <li>En lengre tekst med forskjellig font og formatering.</li>
-        <li>Lenker og video til de prosjektene vi allerede har gjort i faget. F.eks lenke til spillet du lagde i scratch. Kanskje embed?</li>
-    </ol>
+    <div class = "plaveholder"> I'm a div!</div>
 </body>
 </html>
