--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class = "plaveholder"> I'm a div!</div>
+    <div class = "container">
+        <div class = "header">
+            <div class = "venstre">
+                <a href="index.html">Hjem</a>
+                <a href="about.html">Om meg</a>
+                
+            </div>
+            <div class = "hoyre">
+                <div class = "navn"> Björn</div>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
