--- a/index.html
+++ b/index.html
@@ -7,14 +7,27 @@
 </head>
 <body>
     <div class = "container">
-        <div class = "header">
-            <div class = "venstre">
-                <a href="index.html">Hjem</a>
-                <a href="about.html">Om meg</a>
-                
+        <div class = "nav-wrapper">
+            <div class = "left-side">
+                <div class="nav-link-wrapper">
+                    <a href="index.html">Hjem</a>
+                </div>
+                <div class="nav-link-wrapper">
+                    <a href="about.html">Om meg</a>
+                </div>
             </div>
             <div class = "hoyre">
-                <div class = "navn"> Björn</div>
+                <div class = "brand">
+                    <div class = "navn"> NAVN</div>
+                </div>
+            </div>
+        </div>
+        <div class="content-wrapper">
+            <div class="portfolio-items-wrapper">
+                <div class="portfolio-item-wrapper">
+                    <div class = "portfolio-img-background" style="background-image:url(images/bilde1.jpg)">
+                    </div>
+                </div>               
             </div>
         </div>
     </div>
