--- a/index.html
+++ b/index.html
@@ -25,9 +25,21 @@
         <div class="content-wrapper">
             <div class="portfolio-items-wrapper">
                 <div class="portfolio-item-wrapper">
-                    <div class = "portfolio-img-background" style="background-image:url(images/bilde1.jpg)">
+                    <div class = "portfolio-img-background" style="background-image:url(images/bilde1.jpg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="subtitle">
+                            Noe jeg har laget
+                        </div>
                     </div>
-                </div>               
+                </div>
+                <div class="portfolio-item-wrapper">
+                    <div class = "portfolio-img-background" style="background-image:url(images/bilde2.jpg)"></div>
+                    <div class="img-text-wrapper">
+                        <div class="subtitle">
+                            Noe jeg har laget
+                        </div>
+                    </div>
+                </div>                    
             </div>
         </div>
     </div>
