--- a/index.html
+++ b/index.html
@@ -15,6 +15,9 @@
                 <div class="nav-link-wrapper">
                     <a href="about.html">Om meg</a>
                 </div>
+                <div class="nav-link-wrapper">
+                    <a href="flexboxTrening.html">Flexbox trening</a>
+                </div>
             </div>
             <div class = "hoyre">
                 <div class = "brand">
