--- a/about.html
+++ b/about.html
@@ -2,9 +2,9 @@
 <html lang = "en">
 <head>
     <meta charset = "UTF-8">
-    <title>Om</title>
+    <title>Om denne siden</title>
 </head>
 <body>
-    <h1>Tekst som forklarer noe</h1>
+    <h1>Denne siden er et eksempel på en nettside for valgfag programmering.</h1>
 </body>
 </html>
