--- a/flexboxTrening.html
+++ b/flexboxTrening.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset = "UTF-8">
-        <title>Nettside med klikkbare bilder i et grid som endrer seg basert på vindustørrelse</title>
+        <title>Eksempel bruk av flexbox</title>
         <link rel="stylesheet" href="styles2.css">
     </head>
     <body>
