--- a/Stablespill/index.html
+++ b/Stablespill/index.html
@@ -13,6 +13,8 @@
   <script src="circle.js"></script>
   <script src="boundary.js"></script>
   <h1>Stablespill</h1>
+  <p>Laget med p5.js og fysikkmotoren matter.js</p>
+  <p>Modifisert kode med utgangspunkt fra <a href="https://www.youtube.com/watch?v=urR596FsU68&t=1360s&ab_channel=TheCodingTrain">The coding train</a></p>
   <script src="stablespill.js"></script>
 
 
