--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
                 <div class="nav-link-wrapper">
                     <a href="flexboxTrening.html">Flexbox trening</a>
                 </div>
+                <div class="nav-link-wrapper">
+                    <a href="p5eksempel.html">p5 eksempel</a>
+                </div>
+                <div class="nav-link-wrapper">
+                    <a href = "Stablespill/index.html">Stablespill</a>
+                </div>
+                <div class="nav-link-wrapper">
+                    <a href = "Get_Big_or_Die_Tryin'/index.html">Spisespill</a>
+                </div>
+                
             </div>
             <div class = "hoyre">
                 <div class = "brand">
